Added description and changed from PSR-0 to PSR-4

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "name": "stil/cool-captcha",
+    "description": "Classes generating fancy image captchas using GD extension.",
+    "license": "GPL-3.0",
     "autoload": {
-        "psr-0": {
+        "psr-4": {
             "CoolCaptcha\\": "src/"
         }
     }
